# zmk-buddy

./: .pre-commit-config.yaml  README.md  TODO.md  justfile  pyproject.toml
.devcontainer/: .gitignore  Dockerfile  devcontainer.json  on-shell-start.sh  post-create.sh
.github/workflows/: lint.yaml  publish-release.yml  publish-to-test-pypi.yml
doc/: development.md
test/urob/: base.yaml
zmk_buddy/: __main__.py  evdev.py  keyboard_monitor_base.py  learning.py  live.py  live_gtk.py  live_preflight.py  pynput_monitor.py  util.py  zmk_client.py
zmk_buddy/assets/: __init__.py
zmk_buddy/data/keymaps/: __init__.py
